--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,2 +1,10 @@
 <h1>Welcome to your Profile Page <3 </h1>
-    <div></div>
+    <div *ngIf="userId" class="main-div">
+        <div class="card">
+            <div class="header">
+                <div class="avatar">
+                    <img src=""
+                </div>
+            </div>        
+        </div>
+    </div>
