--- Auto-Git Commit ---

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -3,11 +3,10 @@
             <div class="card">
                 <div class="header">
                     <div class="avatar">
-                        <img src="http://localhost:4200/api/auth/profile-image/{{userId.profileImage}}"
+                        <!-- <img src="http://localhost:4200/api/auth/profile-image/{{userId.profileImage}}"
                             class="header-image">
                     </div>
-                    <div class="title"> {{userId.name}}</div>
-                    <div class="email">{{.email}}</div>
+                    <div class="title"> {{userId.name}}</div> -->
+                    </div>
                 </div>
             </div>
-        </div>
