--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -2,7 +2,7 @@
     <div class="col-xs-12 col-md-6 col-md-offset-3">
         <form #authForm="ngForm" (ngSubmit)="onSubmit(authForm)">
             <div class="form-group">
-                <label for="name" class="form-text text-muted"> Full name</label>
+                <label for="username" class="form-text text-muted"> Full name</label>
                 <input required pattern="[a-zA-Z ]*" ngModel name="name" #name="ngModel" (change)="log(name)" ngModel
                     name="name" id="name" type="text" class="form-control form-control-m">
                 <div class="alert alert-danger" *ngIf="name.touched && !name.valid">
