--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -14,6 +14,7 @@
             <div class="pull-left">
                 <h4 class="list-group-item-heading">{{product.name}}</h4>
                 <p class="list-group-item-heading">{{ product.description}}</p>
+                <h6 class="list-group-item-heading">{{product.title}</h6>
             </div>
             <span class="pull-right">
                 <img 
