--- Auto-Git Commit ---

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,5 @@
 <header (featureSelected)="onNavigate('$event')"></header>
-<app-products [Product]=
- name="A Red Headphone" ,
- description=" 'this is a simplt test'" ,
-  img="https://pcbonlineshop.com/var/photo/product/2000x4000/4/176/4.jpg"></app-products>
+<app-products [products]=""></app-products>
 <div class="container">
   <div class="row">
     <div class="col-md-12">
