--- Auto-Git Commit ---

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <header (featureSelected)="onNavigate('$event')"></header>
-<app-products [products]=""></app-products>
+<app-products [products]="" 
+username="Cartzilla"
+title="Multi vendor digital"></app-products>
 <div class="container">
   <div class="row">
     <div class="col-md-12">
