--- Auto-Git Commit ---

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,11 @@
 <header (featureSelected)="onNavigate('$event')"></header>
-<app-products
-name="Cartzilla" 
-title="by Thmemes in Wooker"
-price="59$"
-rating="five stars (22)"
-lastUpdates="16 Dec 20"
->
-  multi-vendor digital marketplace with a Dokan"></app-products>
+
+<!-- [name]="Cartzilla"  -->
+<!-- [title]="by Thmemes in Wooker"
+[price]="59$"
+[rating]="five stars (22)"
+lastUpdates="16 Dec 20" -->
+<app-products [products]=""> </app-products>
 <div class="container">
   <div class="row">
     <div class="col-md-12">
