--- Auto-Git Commit ---

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
 [price]="59$"
 [rating]="five stars (22)"
 lastUpdates="16 Dec 20" -->
-<app-products [products]=""> </app-products>
+<app-products [products]="products"> </app-products>
 <div class="container">
   <div class="row">
     <div class="col-md-12">
