--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,20 +1,48 @@
 <div class="container">
     <div class="row">
         <div class="col-md-5">
-                <div class="col-md-7">
-                    <div class="pull-left">
-                        <h4 class="list-group-item-heading">{{products.name}}</h4>
-                        <p class="list-group-item-heading">{{ products.description}}</p>
-                        <h6 class="list-group-item-heading">{{products.title}}</h6>
-                        <h6 class="list-group-item-heading">{{products.price}}</h6>
-                        <h6 class="list-group-item-heading">{{products.rating}}</h6>
-                        <h3 class="list-group-item-heading">{{products.sales}}</h3>
+            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img class="d-block w-100" [src]="products.imagePath" alt={{products.name}} alt="First slide">
                     </div>
-                    <span class="pull-right">
-                        <img [src]="products.imagePath" alt={{products.name}} class="img-responsive"
-                            style="max-height: 100px;">
-                    </span>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" [src]="products.imagePath" alt={{products.name}} alt="Second slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" [src]="products.imagePath" alt={{products.name}} alt="Third slide">
+                    </div>
                 </div>
+                <p>Tags: marketplace , electronics </p>
+                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
             </div>
         </div>
+        <div class="col-md-7">
+            <h2 class="product-name"> {{products.name}}</h2>
+            <p>by MadrasThemes in Wooco </p>
+            <ul>
+                <li>Multi-vendor Digital Market place with Dokan</li>
+                <li>Electronic bla bla bla</li>
+            </ul>
+        </div>
+        <div class="col-md-7">
+            <
+        <img src="https://lh3.googleusercontent.com/proxy/KspM1weMsz771atks1UWR3cGR28se9kH0AX4bOVqw6xvuUUs-pMmb5msEMGIjo7Tu03Idq_jFKmrZdtYWSLs0DxfM5tmpujKxv_ckgfgIVlOHZPzqpKNd7AQvwRTTEY"
+            class="stars">
     </div>
+    <div class="pull-left">
+        <h4 class="list-group-item-heading"></h4>
+        <p class="list-group-item-heading">{{ products.description}}</p>
+        <h6 class="list-group-item-heading">{{products.title}}</h6>
+        <h6 class="list-group-item-heading">{{products.price}}</h6>
+        <h6 class="list-group-item-heading">{{products.rating}}</h6>
+        <h3 class="list-group-item-heading">{{products.sales}}</h3>
+    </div>
+</div>
