--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row">
-        <div class="col-md-5">
+        <div class="col-sm">
             <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
@@ -13,7 +13,7 @@
                         <img class="d-block w-100" [src]="products.imagePath" alt={{products.name}} alt="Third slide">
                     </div>
                 </div>
-                <p>Tags: marketplace , electronics </p>
+                <p class="tags">Tags: marketplace , electronics </p>
                 <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="sr-only">Previous</span>
@@ -24,25 +24,21 @@
                 </a>
             </div>
         </div>
-        <div class="col-md-7">
+        <div class="col-sm">
             <h2 class="product-name"> {{products.name}}</h2>
-            <p>by MadrasThemes in Wooco </p>
+            <p>{{products.title}}</p>
             <ul>
-                <li>Multi-vendor Digital Market place with Dokan</li>
+                <li>{{ products.description}} </li>
                 <li>Electronic bla bla bla</li>
             </ul>
         </div>
-        <div class="col-md-7">
-            <
-        <img src="https://lh3.googleusercontent.com/proxy/KspM1weMsz771atks1UWR3cGR28se9kH0AX4bOVqw6xvuUUs-pMmb5msEMGIjo7Tu03Idq_jFKmrZdtYWSLs0DxfM5tmpujKxv_ckgfgIVlOHZPzqpKNd7AQvwRTTEY"
-            class="stars">
+        <div class="col-sm">
+            <p class="price"> $59</p>
+            <img src="https://lh3.googleusercontent.com/proxy/KspM1weMsz771atks1UWR3cGR28se9kH0AX4bOVqw6xvuUUs-pMmb5msEMGIjo7Tu03Idq_jFKmrZdtYWSLs0DxfM5tmpujKxv_ckgfgIVlOHZPzqpKNd7AQvwRTTEY"
+                class="stars">
+            <p class="sales">{{products.sales}}</p>
+            <p class="lastUpdated">{{ lastUpdated }}</p>
+            <button class="preview"> Preview</button> <img class="shoppingCart" src="https://image.shutterstock.com/image-vector/vector-shopping-cart-icon-260nw-155241989.jpg">
+
+        </div>
     </div>
-    <div class="pull-left">
-        <h4 class="list-group-item-heading"></h4>
-        <p class="list-group-item-heading">{{ products.description}}</p>
-        <h6 class="list-group-item-heading">{{products.title}}</h6>
-        <h6 class="list-group-item-heading">{{products.price}}</h6>
-        <h6 class="list-group-item-heading">{{products.rating}}</h6>
-        <h3 class="list-group-item-heading">{{products.sales}}</h3>
-    </div>
-</div>
