--- a/src/app/products/products.component.css
+++ b/src/app/products/products.component.css
@@ -25,5 +25,11 @@
     max-height: 30px;
 }
 .preview{
-    max-height: 50px;
+    
+    margin-top: 20px;
+    max-height: 30px;
+}
+.grey-heart{
+   margin-right: 250px;
+    max-height: 40px;
 }
