--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -33,12 +33,19 @@
             </ul>
         </div>
         <div class="col-sm">
+            <div class="d-flex justify-content-end">
+                <img class="p-2 grey-heart"
+                    src="https://www.clipartkey.com/mpngs/m/129-1293437_heart-icon-grey-png.png">
+            </div>
+            <div class="col-6 border-right"></div>
+            <div class="col-6"></div>
             <p class="price"> $59</p>
             <img src="https://lh3.googleusercontent.com/proxy/KspM1weMsz771atks1UWR3cGR28se9kH0AX4bOVqw6xvuUUs-pMmb5msEMGIjo7Tu03Idq_jFKmrZdtYWSLs0DxfM5tmpujKxv_ckgfgIVlOHZPzqpKNd7AQvwRTTEY"
                 class="stars">
             <p class="sales">{{products.sales}}</p>
-            <p class="lastUpdated">{{ lastUpdated }}</p>
-            <button class="preview"> Preview</button> <img class="shoppingCart" src="https://image.shutterstock.com/image-vector/vector-shopping-cart-icon-260nw-155241989.jpg">
+            <p class="lastUpdated"></p>
+            <button class="preview"> Preview</button> <img class="shoppingCart"
+                src="https://image.shutterstock.com/image-vector/vector-shopping-cart-icon-260nw-155241989.jpg">
 
         </div>
     </div>
