--- a/src/app/products/products.component.css
+++ b/src/app/products/products.component.css
@@ -33,3 +33,8 @@
    margin-right: 250px;
     max-height: 40px;
 }
+   .vertical { 
+    border-left: 6px solid grey; 
+    height: 300px;  
+    left: 50%; 
+}
