--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,48 +1,34 @@
 <div class="container">
-    <div class="row">
+    <div class="row" *ngFor="let product of products;">
         <div class="col-sm">
             <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img class="d-block w-100" [src]="products.imagePath" alt={{products.name}} alt="First slide">
-                    </div>
-                    <div class="carousel-item">
-                        <img class="d-block w-100" [src]="products.imagePath" alt={{products.name}} alt="Second slide">
-                    </div>
-                    <div class="carousel-item">
-                        <img class="d-block w-100" [src]="products.imagePath" alt={{products.name}} alt="Third slide">
+                        <img class="d-block w-100" [src]="product.imagePath" alt={{product.name}} alt="First slide">
                     </div>
                 </div>
                 <p class="tags">Tags: marketplace , electronics </p>
-                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
             </div>
         </div>
         <div class="col-sm">
             <h2 class="product-name"> {{products.name}}</h2>
-            <p>{{products.title}}</p>
+            <p>{{product.title}}</p>
             <ul>
-                <li>{{ products.description}} </li>
+                <li>{{ product.description}} </li>
                 <li>Electronic bla bla bla</li>
             </ul>
         </div>
         <div class="col-sm">
+            <div class="vertical"></div>
+
             <div class="d-flex justify-content-end">
                 <img class="p-2 grey-heart"
                     src="https://www.clipartkey.com/mpngs/m/129-1293437_heart-icon-grey-png.png">
             </div>
-            <div class="col-6 border-right"></div>
-            <div class="col-6"></div>
             <p class="price"> $59</p>
             <img src="https://lh3.googleusercontent.com/proxy/KspM1weMsz771atks1UWR3cGR28se9kH0AX4bOVqw6xvuUUs-pMmb5msEMGIjo7Tu03Idq_jFKmrZdtYWSLs0DxfM5tmpujKxv_ckgfgIVlOHZPzqpKNd7AQvwRTTEY"
                 class="stars">
-            <p class="sales">{{products.sales}}</p>
+            <p class="sales">{{product.sales}}</p>
             <p class="lastUpdated"></p>
             <button class="preview"> Preview</button> <img class="shoppingCart"
                 src="https://image.shutterstock.com/image-vector/vector-shopping-cart-icon-260nw-155241989.jpg">
