--- Auto-Git Commit ---

--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -15,7 +15,9 @@
             <p>{{product.title}}</p>
             <ul>
                 <li>{{ product.description}} </li>
-                <li>Electronic bla bla bla</li>
+                <li>Electronic Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius qui provident atque fuga
+                    maxime, suscipit laboriosam quasi in molestias illum iusto voluptatibus nostrum ea, sit, nesciunt
+                    ducimus totam doloribus quibusdam.</li>
             </ul>
         </div>
         <div class="col-sm">
@@ -27,11 +29,12 @@
             </div>
             <p class="price"> $59</p>
             <img src="https://lh3.googleusercontent.com/proxy/KspM1weMsz771atks1UWR3cGR28se9kH0AX4bOVqw6xvuUUs-pMmb5msEMGIjo7Tu03Idq_jFKmrZdtYWSLs0DxfM5tmpujKxv_ckgfgIVlOHZPzqpKNd7AQvwRTTEY"
-                class="stars">
-            <p class="sales">{{product.sales}}</p>
+                class="stars"><div>(22)</div>
+            <p class="sales">{{product.sales}} </p>
             <p class="lastUpdated"></p>
-            <button class="preview"> Preview</button> <img class="shoppingCart"
+            <button class="btn btn-light preview"> Preview</button> <img class="shoppingCart"
                 src="https://image.shutterstock.com/image-vector/vector-shopping-cart-icon-260nw-155241989.jpg">
 
         </div>
     </div>
+</div>
