--- Auto-Git Commit ---

--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -28,10 +28,13 @@
                     src="https://www.clipartkey.com/mpngs/m/129-1293437_heart-icon-grey-png.png">
             </div>
             <p class="price"> $59</p>
+
+
             <img src="https://lh3.googleusercontent.com/proxy/KspM1weMsz771atks1UWR3cGR28se9kH0AX4bOVqw6xvuUUs-pMmb5msEMGIjo7Tu03Idq_jFKmrZdtYWSLs0DxfM5tmpujKxv_ckgfgIVlOHZPzqpKNd7AQvwRTTEY"
-                class="stars"><div>(22)</div>
+                class="stars">
+            <div>(22)</div>
             <p class="sales">{{product.sales}} </p>
-            <p class="lastUpdated"></p>
+            <p class="lastUpdated">{{lastUpdated}}</p>
             <button class="btn btn-light preview"> Preview</button> <img class="shoppingCart"
                 src="https://image.shutterstock.com/image-vector/vector-shopping-cart-icon-260nw-155241989.jpg">
 
