done with the products page

--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -21,22 +21,22 @@
             </ul>
         </div>
         <div class="col-sm">
-            <div class="vertical"></div>
+            <div class="divider">
+            </div>
 
             <div class="d-flex justify-content-end">
                 <img class="p-2 grey-heart"
                     src="https://www.clipartkey.com/mpngs/m/129-1293437_heart-icon-grey-png.png">
             </div>
             <p class="price"> $59</p>
-
-
             <img src="https://lh3.googleusercontent.com/proxy/KspM1weMsz771atks1UWR3cGR28se9kH0AX4bOVqw6xvuUUs-pMmb5msEMGIjo7Tu03Idq_jFKmrZdtYWSLs0DxfM5tmpujKxv_ckgfgIVlOHZPzqpKNd7AQvwRTTEY"
                 class="stars">
             <div>(22)</div>
             <p class="sales">{{product.sales}} </p>
-            <p class="lastUpdated">{{lastUpdated}}</p>
+            <p class="lastUpdated">Last Updated: 16 Dec 20 </p>
             <button class="btn btn-light preview"> Preview</button> <img class="shoppingCart"
                 src="https://image.shutterstock.com/image-vector/vector-shopping-cart-icon-260nw-155241989.jpg">
+            <hr>
 
         </div>
     </div>
