--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<header (featureSelected)="onNavigate('$event')"></header>
+<app-header (featureSelected)="onNavigate('$event')"></app-header>
 
 <div class="container">
   <div class="row">
