--- a/src/app/products/products.component.css
+++ b/src/app/products/products.component.css
@@ -22,74 +22,19 @@
     color: grey;
 }
 .shoppingCart{
-    max-height: 35px;
+    max-height: 30px;
+    margin-left: 10px;
 }
 
 .grey-heart{
-   margin-right: 250px;
+   margin-right: 220px;
     max-height: 40px;
 }
-.rating {
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: center
-}
-
-.rating>input {
-    display: none
-}
-
-.rating>label {
-    position: relative;
-    width: 0.7em;
-    font-size: 40px;
-    color: #FFD600;
-    cursor: pointer
-}
-
-.rating>label::before {
-    content: "\2605";
-    position: absolute;
-    opacity: 0
-}
-
-.rating>label:hover:before,
-.rating>label:hover~label:before {
-    opacity: 1 !important
-}
-
-.rating>input:checked~label:before {
-    opacity: 1
-}
-
-.rating:hover>input:checked~label:before {
-    opacity: 0.4
-}
-
-body {
-    background: #222225;
-    color: white
-}
-
-h1,
-p {
-    text-align: center
-}
-
-h1 {
-    margin-top: 150px
-}
-
-p {
-    font-size: 1.2rem
-}
-
-@media only screen and (max-width: 600px) {
-    h1 {
-        font-size: 14px
-    }
-
-    p {
-        font-size: 12px
-    }
-}
+.divider {
+    position:fixed;
+    top: 30px;
+    left: 53rem;
+    width: 1.5px;
+    bottom: 30px;
+    background-color: rgb(228, 228, 228);
+  }
