--- Auto-Git Commit ---

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
 <app-header (featureSelected)="onNavigate('$event')"></app-header>
 
-<div class="container">
+<!-- <div class="container">
   <div class="row">
     <div class="col-md-12">
       <router-outlet></router-outlet>
       <app-products [products]="products"> </app-products>
     </div>
   </div>
-</div>
+</div> -->
