--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,11 @@
-<app-header (featureSelected)="onNavigate('$event')"></app-header>
-
-<!-- <div class="container">
+<div class="container">
   <div class="row">
+<app-header ></app-header>
+
+
     <div class="col-md-12">
       <router-outlet></router-outlet>
       <app-products [products]="products"> </app-products>
     </div>
   </div>
-</div> -->
+</div>
