--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,15 +1,16 @@
-<nav class="navabar navbar-default">
-    <div class="container-fluid">
-
-        <div class="navbar-brand"> E-Commerce website</div>
-
-        <div class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">
-                <li> <a href="/products" (click)="onSelect('product')"> Products list</a></li>
-                <li> <a href="/auth" (click)="onSelect('sign-in')">Sign in</a></li>
-                <li> <a href="/shopping-list" (click)="onSelect('shopping-list')">Shopping Cart</a></li>
-            </ul>
-
-        </div>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">E-Commerce WebSite</a>
+    <div class="navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="/products">Products </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="auth">Sign Up & Log In</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/shopping-list">Shopping Cart</a>
+            </li>
+        </ul>
     </div>
 </nav>
