--- Auto-Git Commit ---

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">E-Commerce WebSite</a>
+    <a class="navbar-brand" href="#">E-Commerce Website</a>
     <div id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item">
