--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,10 +1,10 @@
 <div class="container">
     <div class="row" *ngFor="let product of products;">
         <div class="col-sm">
-            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <div data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img class="d-block w-100" [src]="product.imagePath" alt={{product.name}} alt="First slide">
+                        <img class="d-block w-100" [src]="product.imagePath" alt={{product.name}}>
                     </div>
                 </div>
                 <p class="tags">{{product.tags}} </p>
@@ -21,21 +21,19 @@
         <div class="col-sm">
             <div class="divider">
             </div>
-
             <div class="d-flex justify-content-end">
-                <img class="p-2 grey-heart"
-                    src="https://www.clipartkey.com/mpngs/m/129-1293437_heart-icon-grey-png.png">
+                <img class="p-2 grey-heart" src="https://www.clipartkey.com/mpngs/m/129-1293437_heart-icon-grey-png.png"
+                    alt="grey-heart">
             </div>
             <p class="price"> {{product.price}}</p>
             <img src="https://lh3.googleusercontent.com/proxy/KspM1weMsz771atks1UWR3cGR28se9kH0AX4bOVqw6xvuUUs-pMmb5msEMGIjo7Tu03Idq_jFKmrZdtYWSLs0DxfM5tmpujKxv_ckgfgIVlOHZPzqpKNd7AQvwRTTEY"
-                class="stars">
+                class="stars" alt="five stars">
             <div>(22)</div>
             <p class="sales">{{product.sales}} </p>
             <p class="lastUpdated">{{product.lastUpdated}} </p>
             <button class="btn btn-light preview"> Preview</button> <img class="shoppingCart"
                 src="https://image.shutterstock.com/image-vector/vector-shopping-cart-icon-260nw-155241989.jpg">
             <hr>
-
         </div>
     </div>
 </div>
