--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -4,6 +4,7 @@
             <div data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
+                        <div></div>
                         <img class="d-block w-100" [src]="product.imagePath" alt={{product.name}}>
                     </div>
                 </div>
@@ -19,8 +20,7 @@
             </ul>
         </div>
         <div class="col-sm">
-            <div class="divider">
-            </div>
+
             <div class="d-flex justify-content-end">
                 <img class="p-2 grey-heart" src="https://www.clipartkey.com/mpngs/m/129-1293437_heart-icon-grey-png.png"
                     alt="grey-heart">
@@ -34,6 +34,7 @@
             <button class="btn btn-light preview"> Preview</button> <img class="shoppingCart"
                 src="https://image.shutterstock.com/image-vector/vector-shopping-cart-icon-260nw-155241989.jpg">
             <hr>
+            
+            </div>
         </div>
     </div>
-</div>
