added five stars img

--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -25,8 +25,7 @@
                     alt="grey-heart">
             </div>
             <p class="price"> {{product.price}}</p>
-            <img src="https://lh3.googleusercontent.com/proxy/KspM1weMsz771atks1UWR3cGR28se9kH0AX4bOVqw6xvuUUs-pMmb5msEMGIjo7Tu03Idq_jFKmrZdtYWSLs0DxfM5tmpujKxv_ckgfgIVlOHZPzqpKNd7AQvwRTTEY"
-                class="stars" alt="five stars">
+            <img src="https://i.imgur.com/rE08v8j.png" class="stars" alt="five stars">
             <div>(22)</div>
             <p class="sales">{{product.sales}} </p>
             <p class="lastUpdated">{{product.lastUpdated}} </p>
