--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,2 +1,2 @@
 <h1>Welcome Boss to your Profile Page! </h1>
-<img class="image" src="https://cdn.business2community.com/wp-content/uploads/2017/08/blank-profile-picture-973460_640.png">
+<img class="image" src="https://i.imgur.com/VsAGQaB.png">
