--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -11,7 +11,10 @@
                 <p class="tags">{{product.tags}} </p>
             </div>
         </div>
+
         <div class="col-sm">
+            <div class="verticalLine">
+            </div>
             <h2 class="product-name"> {{products.name}}</h2>
             <p>{{product.title}}</p>
             <ul>
@@ -32,6 +35,7 @@
             <button class="btn btn-light preview"> Preview</button> <img class="shoppingCart"
                 src="https://image.shutterstock.com/image-vector/vector-shopping-cart-icon-260nw-155241989.jpg">
             <hr>
+
         </div>
     </div>
 </div>
