--- Auto-Git Commit ---

--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -12,7 +12,7 @@
             </div>
         </div>
 
-        <div class="col-sm">
+        <div class="col">
             <div class="verticalLine">
             </div>
             <h2 class="product-name"> {{products.name}}</h2>
@@ -22,7 +22,7 @@
                 <li>{{product.description}}</li>
             </ul>
         </div>
-        <div class="col-sm">
+        <div class="col">
             <div class="d-flex justify-content-end">
                 <img class="p-2 grey-heart" src="https://www.clipartkey.com/mpngs/m/129-1293437_heart-icon-grey-png.png"
                     alt="grey-heart">
