--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -11,10 +11,10 @@
                 <p class="tags">{{product.tags}} </p>
             </div>
         </div>
-
-        <div class="col">
-            <div class="verticalLine">
-            </div>
+        <div class="verticalLine">
+            vertical line
+        </div>
+        <div class="col-sm">
             <h2 class="product-name"> {{products.name}}</h2>
             <p>{{product.title}}</p>
             <ul>
@@ -22,7 +22,7 @@
                 <li>{{product.description}}</li>
             </ul>
         </div>
-        <div class="col">
+        <div class="col-sm">
             <div class="d-flex justify-content-end">
                 <img class="p-2 grey-heart" src="https://www.clipartkey.com/mpngs/m/129-1293437_heart-icon-grey-png.png"
                     alt="grey-heart">
