--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,18 +1,11 @@
 <div class="container">
     <div class="row" *ngFor="let product of products;">
         <div class="col-sm">
-            <div data-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <div></div>
-                        <img class="d-block w-100" [src]="product.imagePath" alt={{product.name}}>
-                    </div>
-                </div>
-                <p class="tags">{{product.tags}} </p>
-            </div>
-        </div>
-        <div class="verticalLine">
-            vertical line
+            <div class="first-block">
+            <img src="{{product.imagePath}}" alt="{{product.name}}" class="img-thumbnail">
+            <p class="tags">{{product.tags}}</p>
+            <!-- <div class="verticalLine">
+            </div> -->
         </div>
         <div class="col-sm">
             <h2 class="product-name"> {{products.name}}</h2>
@@ -22,11 +15,18 @@
                 <li>{{product.description}}</li>
             </ul>
         </div>
+        </div>
         <div class="col-sm">
             <div class="d-flex justify-content-end">
                 <img class="p-2 grey-heart" src="https://www.clipartkey.com/mpngs/m/129-1293437_heart-icon-grey-png.png"
                     alt="grey-heart">
             </div>
+        </div>
+        <!--
+        <div class="verticalLine">
+        </div>
+       
+           
             <p class="price"> {{product.price}}</p>
             <img src="https://i.imgur.com/rE08v8j.png" class="stars" alt="five stars">
             <div>(22)</div>
@@ -34,7 +34,7 @@
             <p class="lastUpdated">{{product.lastUpdated}} </p>
             <button class="btn btn-light preview"> Preview</button> <img class="shoppingCart"
                 src="https://image.shutterstock.com/image-vector/vector-shopping-cart-icon-260nw-155241989.jpg">
-            <hr>
+            <hr> --> -->
 
         </div>
     </div>
