--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,2 +1,2 @@
-<h1>Welcome boss to your profile page! </h1>
+<h1>Welcome to your profile page </h1>
 <img class="image" src="https://i.imgur.com/VsAGQaB.png">
