--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,12 +1,14 @@
 <div class="container">
     <div class="row" *ngFor="let product of products;">
-        <div class="col-sm">
+        <div class="col-md-4">
             <div class="first-block">
                 <img src="{{product.imagePath}}" alt="{{product.name}}" class="img-thumbnail">
                 <p class="tags"> Tags : {{product.tags}} . . . See all tags</p>
             </div>
         </div>
-        <div class="col-sm">
+<!-- <div class="col-md-4 verticalLine"></div> -->
+        <div class="col-md-4">
+            <!-- <div class="verticalLine"></div> -->
             <h2 class="product-name"> {{product.name}}</h2>
             <p class="title">{{product.title}}</p>
             <ul>
@@ -15,7 +17,7 @@
             </ul>
         </div>
 
-        <div class="col-sm">
+        <div class="col-md-4">
             <div class="d-flex justify-content-end">
                 <img class="p-2 grey-heart" src="https://www.clipartkey.com/mpngs/m/129-1293437_heart-icon-grey-png.png"
                     alt="grey-heart">
@@ -25,7 +27,7 @@
             <img src="https://i.imgur.com/rE08v8j.png" class="stars" alt="five stars">
             <div>(22)</div>
             <p class="sales">{{product.sales}} </p>
-            <p class="lastUpdated">{{product.lastUpdated}} </p>
+            <p class="lastUpdated">Last Updated:{{product.lastUpdated}} </p>
             <button class="btn btn-light preview"> Preview</button> <img class="shoppingCart"
                 src="https://image.shutterstock.com/image-vector/vector-shopping-cart-icon-260nw-155241989.jpg">
             <hr>
