--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -6,26 +6,23 @@
                 <p class="tags"> Tags : {{product.tags}} . . . See all tags</p>
             </div>
         </div>
-<!-- <div class="col-md-4 verticalLine"></div> -->
         <div class="col-md-4">
-            <!-- <div class="verticalLine"></div> -->
-            <h2 class="product-name"> {{product.name}}</h2>
+             <div>
+             <h2 class="product-name"> {{product.name}}</h2>
             <p class="title">{{product.title}}</p>
             <ul>
                 <li>{{ product.description}} </li>
                 <li>{{product.description}}</li>
             </ul>
+             </div>
         </div>
-
         <div class="col-md-4">
             <div class="d-flex justify-content-end">
                 <img class="p-2 grey-heart" src="https://www.clipartkey.com/mpngs/m/129-1293437_heart-icon-grey-png.png"
                     alt="grey-heart">
-
             </div>
             <p class="price"> {{product.price}}</p>
             <img src="https://i.imgur.com/rE08v8j.png" class="stars" alt="five stars">
-            <div>(22)</div>
             <p class="sales">{{product.sales}} </p>
             <p class="lastUpdated">Last Updated:{{product.lastUpdated}} </p>
             <button class="btn btn-light preview"> Preview</button> <img class="shoppingCart"
