--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,22 +1,23 @@
 <div class="container">
     <div class="row" *ngFor="let product of products;">
-        <div class="col-md-4">
+        <div class="col-sm">
             <div class="first-block">
                 <img src="{{product.imagePath}}" alt="{{product.name}}" class="img-thumbnail">
                 <p class="tags"> Tags : {{product.tags}} . . . See all tags</p>
             </div>
         </div>
-        <div class="col-md-4">
-             <div>
-             <h2 class="product-name"> {{product.name}}</h2>
+        <div class="col-sm">
+            <h2 class="product-name"> {{product.name}}</h2>
             <p class="title">{{product.title}}</p>
             <ul>
                 <li>{{ product.description}} </li>
                 <li>{{product.description}}</li>
             </ul>
-             </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-sm">
+            <div class="verticalLine"></div>
+            </div>
+        <div class="col-sm">
             <div class="d-flex justify-content-end">
                 <img class="p-2 grey-heart" src="https://www.clipartkey.com/mpngs/m/129-1293437_heart-icon-grey-png.png"
                     alt="grey-heart">
@@ -28,6 +29,6 @@
             <button class="btn btn-light preview"> Preview</button> <img class="shoppingCart"
                 src="https://image.shutterstock.com/image-vector/vector-shopping-cart-icon-260nw-155241989.jpg">
             <hr>
-
         </div>
     </div>
+</div>
