added vertical line

--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -14,7 +14,7 @@
                 <li>{{product.description}}</li>
             </ul>
         </div>
-        <div class="col-sm">
+        <div class="col-sm-2">
             <div class="verticalLine"></div>
             </div>
         <div class="col-sm">
