--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -7,17 +7,22 @@
                     name="name" id="name" type="text" class="form-control form-control-m">
                 <div class="alert alert-danger" *ngIf="name.touched && !name.valid">
                     Name Does Not Match The Required Pattern</div>
+
                 <label for="email" class="form-text text-muted">Email</label>
-                <input required ngModel name="email" #email="ngModel" (change)="log(email)" minlength="6" ngModel
+                <input required ngModel name="email" #email="ngModel" (change)="log(email)"
+                 minlength="6" ngModel
                     name="email" id="email" type="text" class="form-control form-control-m">
-                <div class="alert alert-danger" *ngIf="email.touched && !email.valid">Email does not match the required
-                    charachters</div>
+                <div class="alert alert-danger"
+                 *ngIf="email.touched && !email.valid">
+                 Email does not match the required charachters</div>
             </div>
             <div class="form-group">
                 <label for="password" class="form-text text-muted">Password</label>
-                <input required ngModel name="password" #password="ngModel" (change)="log(password)" minlength="6"
+                <input required ngModel name="password" #password="ngModel" (change)="log(password)"
+                 minlength="6"
                     ngModel name="password" id="password" type="password" class="form-control form-control-m">
-                <div class="alert alert-danger" *ngIf="password.touched && !password.valid"> Password doesnt match the
+                <div class="alert alert-danger" *ngIf="password.touched && !password.valid"> 
+                    Password doesnt match the
                     required charachters</div>
             </div>
             <div>
